# freesteam

./: CHANGELOG.txt  CMakeLists.txt  README-msvs.txt  README.md  SConstruct  b23.c  b23.h  backwards.c  backwards.h  bounds.c  bounds.h  common.c  common.h  compat.h  derivs.c  derivs.h  installer.nsi  region1.c  region1.h  region2.c  region2.h  region3.c  region3.h  region4.c  region4.h  solver2.c  solver2.h  steam.c  steam.h  steam_Ts.c  steam_Ts.h  steam_Tx.c  steam_Tx.h  steam_pT.c  steam_pT.h  steam_ph.c  steam_ph.h  steam_ps.c  steam_ps.h  steam_pu.c  (+14 more)
ascend/: SConscript  example.a4c  example2.a4c  freesteam_ascend.c  testmu.a4c
cmake/modules/: Findgsl.cmake
debian/: README.Debian  changelog  control  docs  freesteam-ascend.install  freesteam-doc.install  freesteam-gtk.install  freesteam.pc  libfreesteam-dev.install  libfreesteam-doc.install  libfreesteam1.install  rules  watch
debian/patches/: cadna.patch  clang.patch  cmake.patch  fix-FTBS-test.patch  fix-pytest.cmake  gcc-g++.patch  installdir.patch  order.patch  pedantic.patch  series  swig4.patch
examples/: CMakeLists.txt  README.txt  SConscript  isentropic.c
gtk/: README.txt  SConscript  callbacks.c  freesteam-gtk.c  freesteam-gtk.glade  freesteam-gtk.h  freesteam-gtk.man
gtk/gnome/: freesteam-gtk.desktop
labview/: README  fsteam.c  fsteam.h
labview/fsteam/: fsteam.lvlib
labview/fsteam/VIs/: density.vi  dir.mnu  dynamic viscosity.vi  enthalpy of vaporization.vi  enthalpy.vi  entropy.vi  internal energy.vi  isobaric heat capacity.vi  isochoric heat capacity.vi  saturated boiling temp.vi  saturated quality.vi  specific volume.vi  speed of sound.vi  thermal conductivity.vi
macosx/: README.txt
macosx/freesteam.pmdoc/: 01temp-contents.xml  01temp.xml  index.xml
pyqt/: UI_steamTables.py  UI_steamTablesrc
pyqt/i18n/: UI_steamTables_en.qm  UI_steamTables_en.ts
pyqt/images/: images.qrc  images_rc.py
pyqt/units/: UI.py  __init__.py  config.py  unidades.py
python/: CMakeLists.txt  exergy.py  test.py
qt/: ST.ui  stgui.cpp  stgui.h  stgui.pro
scons/: disttar.py  gsl.py  gtk.py
scripts/: README.md  setup.py
